force-app/main/default/objects/CPW_Product_Checklist_Metadata__mdt/CPW_Product_Checklist_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>CPW Product Checklist Metadata</label>
    <pluralLabel>CPW Product Checklist Metadatas</pluralLabel>
</CustomObject>