force-app/main/default/objects/CPW_Product_Checklist_Metadata__mdt/fields/Is_Dual__c.field-meta.xml
<CustomField>
    <fullName>Is_Dual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dual</label>
    <type>Checkbox</type>
</CustomField>