force-app/main/default/objects/CPW_Product_Checklist_Metadata__mdt/fields/Restrict_Direct_Contract_Only_Option__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Direct_Contract_Only_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict Direct Contract Only Option</label>
    <type>Checkbox</type>
</CustomField>