force-app/main/default/objects/CPW_Product_Checklist_Metadata__mdt/fields/Restrict_Surest_Options__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Surest_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict Surest Options</label>
    <type>Checkbox</type>
</CustomField>