force-app/main/default/objects/CPW_Product_Checklist_Metadata__mdt/fields/Yes_No_Only__c.field-meta.xml
<CustomField>
    <fullName>Yes_No_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yes/No Only</label>
    <type>Checkbox</type>
</CustomField>