force-app/main/default/objects/CPW_Product_Checklist_Metadata__mdt/listViews/view.listView-meta.xml
<ListView>
    <fullName>view</fullName>
    <columns>IsActive__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Label__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Is_Dual__c</columns>
    <columns>Yes_No_Only__c</columns>
    <filterScope>Everything</filterScope>
    <label>view</label>
</ListView>